--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -2,76 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(n, words):\n",
-    "    answer = []\n",
-    "\n",
+    "def check_correction(str):\n",
+    "    stack = []\n",
     "    \n",
+    "    for i in range(len(str)):\n",
+    "        stack.append(str[i])\n",
+    "        \n",
+    "        if (str[0] == \")\" or str[-1] == \"(\") or\\\n",
+    "            (str[0] == \"}\" or str[-1] == \"{\") or\\\n",
+    "            (str[0] == \"]\" or str[-1] == \"[\"):\n",
+    "            answer = False\n",
+    "            return answer\n",
+    "        \n",
+    "        if len(stack) > 1:    \n",
+    "            if stack[-1] == \")\" and stack[-2] == \"(\":\n",
+    "                stack.pop()\n",
+    "                stack.pop()\n",
+    "            elif stack[-1] == \"]\" and stack[-2] == \"[\":\n",
+    "                stack.pop()\n",
+    "                stack.pop()\n",
+    "            elif stack[-1] == \"}\" and stack[-2] == \"{\":\n",
+    "                stack.pop()\n",
+    "                stack.pop()\n",
+    "                \n",
+    "    if len(stack) == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
-    "    return answer"
+    "def solution(s):\n",
+    "    answer = 0\n",
+    "    \n",
+    "    for _ in range(len(s)):\n",
+    "        last_s = list(s).pop(0)\n",
+    "        s = s[1:] + last_s  \n",
+    "        \n",
+    "        if check_correction(s):\n",
+    "            answer += 1\n",
+    "    \n",
+    "    return answer\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29\n",
-      "10\n"
+      "3\n",
+      "2\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "print(solution(3, [\"tank\", \"kick\", \"know\", \"wheel\", \"land\", \"dream\", \"mother\", \"robot\", \"tank\"]))\n",
-    "print(solution([1, 2], [3, 4]))"
+    "print(solution(\"[](){}\"))\n",
+    "print(solution(\"}]()[{\"))\n",
+    "print(solution(\"[)(]\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 1\n"
+      "](){}[\n"
      ]
     }
    ],
    "source": [
-    "n = 3\n",
-    "words = [\"tank\", \"kick\", \"know\", \"wheel\", \"land\", \"dream\", \"mother\", \"robot\", \"tank\"]\n",
+    "s = \"[](){}\"\n",
     "\n",
-    "game_round = 1\n",
-    "counter = 0\n",
-    "prev_word  = ''\n",
-    "prev_words = []\n",
+    "last_s = list(s).pop(0)\n",
+    "s = s[1:] + last_s\n",
     "\n",
-    "for word in words:\n",
-    "    counter += 1\n",
-    "    if len(prev_words) == 0:\n",
-    "        prev_word = word\n",
-    "        prev_words.append(prev_word)\n",
-    "        continue\n",
-    "    \n",
-    "    \n",
-    "    if prev_word[-1] == word[0] or (word in prev_words):\n",
-    "        print(counter, game_round)\n",
-    "        break\n",
-    "    elif prev_word[-1] == word[0]:\n",
-    "        prev_word = word\n",
-    "        prev_words.append(prev_word)\n",
-    "    if counter - n == 0:\n",
-    "        game_round += 1\n",
-    "        counter = 0 "
+    "print(s)"
    ]
   },
   {
