자료구조 업뎃

--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -6,46 +6,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_correction(str):\n",
-    "    stack = []\n",
-    "    \n",
-    "    for i in range(len(str)):\n",
-    "        stack.append(str[i])\n",
-    "        \n",
-    "        if (str[0] == \")\" or str[-1] == \"(\") or\\\n",
-    "            (str[0] == \"}\" or str[-1] == \"{\") or\\\n",
-    "            (str[0] == \"]\" or str[-1] == \"[\"):\n",
-    "            answer = False\n",
-    "            return answer\n",
-    "        \n",
-    "        if len(stack) > 1:    \n",
-    "            if stack[-1] == \")\" and stack[-2] == \"(\":\n",
-    "                stack.pop()\n",
-    "                stack.pop()\n",
-    "            elif stack[-1] == \"]\" and stack[-2] == \"[\":\n",
-    "                stack.pop()\n",
-    "                stack.pop()\n",
-    "            elif stack[-1] == \"}\" and stack[-2] == \"{\":\n",
-    "                stack.pop()\n",
-    "                stack.pop()\n",
-    "                \n",
-    "    if len(stack) == 0:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
+    "from collections import deque\n",
     "\n",
-    "def solution(s):\n",
-    "    answer = 0\n",
-    "    \n",
-    "    for _ in range(len(s)):\n",
-    "        last_s = list(s).pop(0)\n",
-    "        s = s[1:] + last_s  \n",
+    "def solution(maps):\n",
+    "    # 방향 벡터 (상, 하, 좌, 우)\n",
+    "    dx = [-1, 1, 0, 0]\n",
+    "    dy = [0, 0, -1, 1]\n",
+    "\n",
+    "    def bfs(end_x, end_y, maps):\n",
+    "        row, column = end_x + 1, end_y + 1\n",
+    "        have_to_visit = deque([(0, 0, 1)])\n",
+    "        visited = [[False] * column for _ in range(row)]\n",
+    "        visited[0][0] = True\n",
     "        \n",
-    "        if check_correction(s):\n",
-    "            answer += 1\n",
+    "        while have_to_visit:\n",
+    "            x, y, dist = have_to_visit.popleft()\n",
+    "            \n",
+    "            if (x, y) == (end_x, end_y):\n",
+    "                return dist\n",
+    "            \n",
+    "            #네 방항 탐색\n",
+    "            for i in range(4):\n",
+    "                nx, ny = x + dx[i], y + dy[i]\n",
+    "                \n",
+    "                # 범위 내에 있으며, 방분하지 않았고 갈 수 있다면\n",
+    "                if 0 <= nx < row and 0 <= ny < column \\\n",
+    "                    and not visited[nx][ny] and maps[nx][ny] == 1:\n",
+    "                        have_to_visit.append((nx, ny, dist+1))\n",
+    "                        visited[nx][ny] = True\n",
+    "                    \n",
+    "        \n",
+    "        return -1\n",
     "    \n",
-    "    return answer\n",
-    "    "
+    "    return bfs(len(maps)-1, len(maps[0])-1, maps)\n",
+    "        "
    ]
   },
   {
@@ -57,16 +51,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "2\n",
-      "0\n"
+      "11\n",
+      "-1\n"
      ]
     }
    ],
    "source": [
-    "print(solution(\"[](){}\"))\n",
-    "print(solution(\"}]()[{\"))\n",
-    "print(solution(\"[)(]\"))"
+    "print(solution([[1,0,1,1,1],[1,0,1,0,1],[1,0,1,1,1],[1,1,1,0,1],[0,0,0,0,1]]))\n",
+    "print(solution([[1,0,1,1,1],[1,0,1,0,1],[1,0,1,1,1],[1,1,1,0,0],[0,0,0,0,1]]))"
    ]
   },
   {
@@ -78,17 +70,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "](){}[\n"
+      "11\n"
      ]
     }
    ],
    "source": [
-    "s = \"[](){}\"\n",
+    "from collections import deque\n",
     "\n",
-    "last_s = list(s).pop(0)\n",
-    "s = s[1:] + last_s\n",
+    "maps = [[1,0,1,1,1],\n",
+    "        [1,0,1,0,1],\n",
+    "        [1,0,1,1,1],\n",
+    "        [1,1,1,0,1],\n",
+    "        [0,0,0,0,1]]\n",
     "\n",
-    "print(s)"
+    "# 방향 벡터 (상, 하, 좌, 우)\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "def bfs(end_x, end_y, maps):\n",
+    "    row, column = end_x + 1, end_y + 1\n",
+    "    have_to_visit = deque([(0, 0, 1)])\n",
+    "    visited = [[False] * column for _ in range(row)]\n",
+    "    visited[0][0] = True\n",
+    "    \n",
+    "    while have_to_visit:\n",
+    "        x, y, dist = have_to_visit.popleft()\n",
+    "        \n",
+    "        if (x, y) == (end_x, end_y):\n",
+    "            return dist\n",
+    "        \n",
+    "        #네 방항 탐색\n",
+    "        for i in range(4):\n",
+    "            nx, ny = x + dx[i], y + dy[i]\n",
+    "            \n",
+    "            # 범위 내에 있으며, 방분하지 않았고 갈 수 있다면\n",
+    "            if 0 <= nx < row and 0 <= ny < column \\\n",
+    "                and not visited[nx][ny] and maps[nx][ny] == 1:\n",
+    "                    have_to_visit.append((nx, ny, dist+1))\n",
+    "                    visited[nx][ny] = True\n",
+    "                \n",
+    "    \n",
+    "    return -1\n",
+    "\n",
+    "print(bfs(len(maps)-1, len(maps[0])-1, maps))\n",
+    "        "
    ]
   },
   {
