--- a/코딩 테스트/자료구조.ipynb
+++ b/코딩 테스트/자료구조.ipynb
@@ -340,43 +340,42 @@
     "            \n",
     "            \n",
     "    def bfs(self, start):\n",
-    "        visited = set()\n",
     "        visit_order = []\n",
+    "        visited = set()\n",
     "        have_to_visit = deque()\n",
     "        have_to_visit.append(start)\n",
-    "        visited.add(start)\n",
     "        \n",
     "        while have_to_visit:\n",
     "            vertex = have_to_visit.popleft()\n",
-    "            visit_order.append(vertex)\n",
+    "            if vertex not in visited:\n",
+    "                visit_order.append(vertex)\n",
+    "                visited.add(vertex)\n",
     "            \n",
-    "            for node in self.graph[vertex]:\n",
+    "            for node in sorted(self.graph.get(vertex, [])):\n",
     "                neighbor = node[0]\n",
     "                \n",
     "                if neighbor not in visited:\n",
     "                    have_to_visit.append(neighbor)\n",
-    "                    visited.add(neighbor)\n",
     "                    \n",
     "        return visit_order\n",
     "    \n",
     "    \n",
     "    def dfs(self, start):\n",
-    "        visited = set()\n",
     "        visit_order = []\n",
-    "        have_to_visit = []\n",
-    "        have_to_visit.append(start)\n",
-    "        visited.add(start)\n",
+    "        visited = set()\n",
+    "        have_to_visit = [start]\n",
     "        \n",
     "        while have_to_visit:\n",
     "            vertex = have_to_visit.pop()\n",
-    "            visit_order.append(vertex)\n",
+    "            if vertex not in visited:\n",
+    "                visit_order.append(vertex)\n",
+    "                visited.add(vertex)\n",
     "            \n",
     "            # 인접 노드를 역순으로 추가\n",
-    "            for node in reversed(self.graph.get(vertex, [])):\n",
+    "            for node in reversed(sorted(self.graph.get(vertex, []))):\n",
     "                neighbor = node[0]\n",
     "                if neighbor not in visited:\n",
     "                    have_to_visit.append(neighbor)\n",
-    "                    visited.add(neighbor)\n",
     "                    \n",
     "        return visit_order\n",
     "    \n",
