--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -2,112 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(dirs):\n",
-    "    # 방향 딕셔너리 (U, D, L, R)\n",
-    "    direction = {\n",
-    "        'U': (0, 1),\n",
-    "        'D': (0, -1),\n",
-    "        'L': (-1, 0),\n",
-    "        'R': (1, 0)\n",
-    "    }\n",
-    "    \n",
-    "    # 방문한 길을 저장할 집합\n",
-    "    visited = set()\n",
-    "    \n",
-    "    # 현재 위치\n",
-    "    x, y = 0, 0\n",
-    "    \n",
-    "    for d in dirs:\n",
-    "        nx, ny = x + direction[d][0], y + direction[d][1]\n",
+    "import itertools\n",
+    "\n",
+    "def solution(k, dungeons):\n",
+    "    npr = list(itertools.permutations(dungeons, 3))\n",
+    "\n",
+    "    answer = 0\n",
+    "\n",
+    "    for i in range(len(npr)):\n",
+    "        _npr = npr[i]\n",
+    "        curr_k = k\n",
+    "        count = 0\n",
     "        \n",
-    "        # 좌표평면의 경계를 벗어나지 않는 경우만 이동\n",
-    "        if -5 <= nx <= 5 and -5 <= ny <= 5:\n",
-    "            # 길을 양방향으로 저장\n",
-    "            visited.add(((x, y), (nx, ny)))  \n",
-    "            visited.add(((nx, ny), (x, y)))\n",
-    "            # 위치 갱신\n",
-    "            x, y = nx, ny\n",
-    "    \n",
-    "    return len(visited) // 2  # 길을 양방향으로 저장했으므로 2로 나눈 값 반환\n"
+    "        for j in range(len(_npr)):\n",
+    "            if curr_k >= _npr[j][0]:\n",
+    "                curr_k -= _npr[j][1]\n",
+    "                count += 1\n",
+    "                \n",
+    "        if count > answer:\n",
+    "            answer = count\n",
+    "            \n",
+    "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n",
-      "7\n"
+      "3\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "print(solution(\"ULURRDLLU\"))\n",
-    "print(solution(\"LULLLLLLU\"))"
+    "print(solution(80, [[80,20],[50,40],[30,10]]))\n",
+    "print(solution(78, [[78, 18], [70, 11], [67, 9], [60, 8], [59, 2], [57, 54]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5: [[6, None], [7, None], [6, None]]\n",
-      "6: [[7, None], [6, None]]\n",
-      "4: [[6, None], [7, None], [6, None], [7, None]]\n",
-      "7: []\n",
-      "None\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def solution(dirs):\n",
-    "    direction = {\n",
-    "        'U': (0, 1),\n",
-    "        'D': (0, -1),\n",
-    "        'L': (-1, 0),\n",
-    "        'R': (1, 0)\n",
-    "    }\n",
+    "def solution(k, dungeons):\n",
+    "    answer = 0\n",
+    "    n = len(dungeons)\n",
     "    \n",
-    "    visited = set()\n",
+    "    def dfs(current_energy, count, visited):\n",
+    "        nonlocal answer\n",
+    "        # 최대 방문 횟수 갱신\n",
+    "        answer = max(answer, count)\n",
+    "        \n",
+    "        # 아직 방문하지 않은 던전 중 조건(최소 필요 에너지)을 만족하는 던전을 순회\n",
+    "        for i in range(n):\n",
+    "            if not visited[i] and current_energy >= dungeons[i][0]:\n",
+    "                visited[i] = True\n",
+    "                dfs(current_energy - dungeons[i][1], count + 1, visited)\n",
+    "                visited[i] = False  # 백트래킹\n",
     "    \n",
-    "    x, y = 0, 0\n",
+    "    dfs(k, 0, [False] * n)\n",
     "    \n",
-    "    for dir in dirs:\n",
-    "        nx, ny = x + direction[dir][0], y + direction[dir][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'int' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m grid \u001b[38;5;241m=\u001b[39m [(x, y) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m y \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m)]\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;241;43m6\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mgrid\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'list'"
-     ]
-    }
-   ],
-   "source": [
-    "grid = [(x, y) for x in range(-5, 6) for y in range(-5, 6)]"
+    "    return answer\n"
    ]
   },
   {
