--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -2,36 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools\n",
-    "\n",
-    "def solution(k, dungeons):\n",
-    "    npr = list(itertools.permutations(dungeons, 3))\n",
-    "\n",
-    "    answer = 0\n",
-    "\n",
-    "    for i in range(len(npr)):\n",
-    "        _npr = npr[i]\n",
-    "        curr_k = k\n",
-    "        count = 0\n",
-    "        \n",
-    "        for j in range(len(_npr)):\n",
-    "            if curr_k >= _npr[j][0]:\n",
-    "                curr_k -= _npr[j][1]\n",
-    "                count += 1\n",
-    "                \n",
-    "        if count > answer:\n",
-    "            answer = count\n",
-    "            \n",
+    "def solution(progresses, speeds):\n",
+    "    answer = []\n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -39,13 +21,14 @@
      "output_type": "stream",
      "text": [
       "3\n",
+      "4\n",
       "3\n"
      ]
     }
    ],
    "source": [
-    "print(solution(80, [[80,20],[50,40],[30,10]]))\n",
-    "print(solution(78, [[78, 18], [70, 11], [67, 9], [60, 8], [59, 2], [57, 54]]))"
+    "print(solution([93, 30, 55], [1, 30, 5]))\n",
+    "print(solution([95, 90, 99, 99, 80, 99], [1, 1, 1, 1, 1, 1]))"
    ]
   },
   {
@@ -54,33 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(k, dungeons):\n",
-    "    answer = 0\n",
-    "    n = len(dungeons)\n",
-    "    \n",
-    "    def dfs(current_energy, count, visited):\n",
-    "        nonlocal answer\n",
-    "        # 최대 방문 횟수 갱신\n",
-    "        answer = max(answer, count)\n",
-    "        \n",
-    "        # 아직 방문하지 않은 던전 중 조건(최소 필요 에너지)을 만족하는 던전을 순회\n",
-    "        for i in range(n):\n",
-    "            if not visited[i] and current_energy >= dungeons[i][0]:\n",
-    "                visited[i] = True\n",
-    "                dfs(current_energy - dungeons[i][1], count + 1, visited)\n",
-    "                visited[i] = False  # 백트래킹\n",
-    "    \n",
-    "    dfs(k, 0, [False] * n)\n",
-    "    \n",
-    "    return answer\n"
+    "progresses = [93, 30, 55]\n",
+    "speeds = [1, 30, 5]\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
