--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -2,32 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(progresses, speeds):\n",
-    "    answer = []\n",
+    "def solution(word):\n",
+    "    answer = 0\n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "4\n",
-      "3\n"
+      "[2, 1]\n",
+      "[1, 3, 2]\n"
      ]
     }
    ],
    "source": [
-    "print(solution([93, 30, 55], [1, 30, 5]))\n",
+    "print(solution(\"FRANCE\", \"french\"))\n",
     "print(solution([95, 90, 99, 99, 80, 99], [1, 1, 1, 1, 1, 1]))"
    ]
   },
@@ -36,11 +35,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "progresses = [93, 30, 55]\n",
-    "speeds = [1, 30, 5]\n",
-    "\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
