--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -7,8 +7,21 @@
    "outputs": [],
    "source": [
     "def solution(word):\n",
+    "    dict = {\n",
+    "        \"A\" : 0,\n",
+    "        \"E\" : 1,\n",
+    "        \"I\" : 2,\n",
+    "        \"O\" : 3,\n",
+    "        \"U\" : 4,\n",
+    "    }\n",
+    "    weights = [781, 156, 31, 6, 1]\n",
+    "\n",
     "    answer = 0\n",
-    "    return answer"
+    "\n",
+    "    for i, char in enumerate(word):\n",
+    "        answer += dict[char] * weights[i]\n",
+    "\n",
+    "    return (answer + len(word))"
    ]
   },
   {
@@ -32,10 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1563\n",
+      "1563\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"I\"\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
