--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -2,26 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(word):\n",
-    "    dict = {\n",
-    "        \"A\" : 0,\n",
-    "        \"E\" : 1,\n",
-    "        \"I\" : 2,\n",
-    "        \"O\" : 3,\n",
-    "        \"U\" : 4,\n",
-    "    }\n",
-    "    weights = [781, 156, 31, 6, 1]\n",
-    "\n",
-    "    answer = 0\n",
-    "\n",
-    "    for i, char in enumerate(word):\n",
-    "        answer += dict[char] * weights[i]\n",
-    "\n",
-    "    return (answer + len(word))"
+    "def solution(s):\n",
+    "    s = list(s)\n",
+    "    \n",
+    "    while True:\n",
+    "        length = len(s)\n",
+    "        if length == 0:\n",
+    "            return 1\n",
+    "        \n",
+    "        for i in range(length-1):\n",
+    "            if s[i] == s[i+1]:\n",
+    "                s.remove(s[i])\n",
+    "                s.remove(s[i])\n",
+    "                break\n",
+    "            \n",
+    "        if length == len(s):\n",
+    "            return 0"
    ]
   },
   {
@@ -39,27 +39,40 @@
     }
    ],
    "source": [
-    "print(solution(\"FRANCE\", \"french\"))\n",
-    "print(solution([95, 90, 99, 99, 80, 99], [1, 1, 1, 1, 1, 1]))"
+    "print(solution(\"FRANCE\", \"french\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1563\n",
-      "1563\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'1001110'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "word = \"I\"\n",
-    "\n"
+    "s = \"baabaa\"\n",
+    "\n",
+    "while True:\n",
+    "    length = len(s)\n",
+    "    i = 0\n",
+    "    \n",
+    "    for i in range(length-1):\n",
+    "        if s[i] == s[i+1]:\n",
+    "            s.remove(s[i])\n",
+    "            s.remove(s[i])\n",
+    "            break\n",
+    "        \n",
+    "            \n",
+    "    "
    ]
   },
   {
