--- a/코딩 테스트/자료구조.ipynb
+++ b/코딩 테스트/자료구조.ipynb
@@ -440,13 +440,7 @@
     "                        distance[i][j] = distance[i][k] + distance[k][j]\n",
     "                        next_vertex[i][j] = next_vertex[i][k]\n",
     "        \n",
-    "        return (distance, next_vertex)\n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    def display(self):\n",
-    "        for vertex in self.graph:\n",
-    "            print(f\"{vertex}: {self.graph[vertex]}\")"
+    "        return (distance, next_vertex)"
    ]
   },
   {
