--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -2,77 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(s):\n",
-    "    s = list(s)\n",
-    "    \n",
-    "    while True:\n",
-    "        length = len(s)\n",
-    "        if length == 0:\n",
-    "            return 1\n",
+    "from itertools import combinations\n",
+    "from collections import Counter\n",
+    "\n",
+    "def solution(k, tangerine):\n",
+    "    count = Counter(tangerine)\n",
     "        \n",
-    "        for i in range(length-1):\n",
-    "            if s[i] == s[i+1]:\n",
-    "                s.remove(s[i])\n",
-    "                s.remove(s[i])\n",
-    "                break\n",
-    "            \n",
-    "        if length == len(s):\n",
-    "            return 0"
+    "    sum_list = []\n",
+    "\n",
+    "    for i in count:\n",
+    "        sum_list.append(count[i])\n",
+    "        \n",
+    "    result = []\n",
+    "    for i in range(len(set_t)+1):\n",
+    "        result = result+list(combinations(set_t,i))  \n",
+    "    \n",
+    "    for i in range(len(result)):\n",
+    "        if sum(map(t_dict.get, result[i])) == k:\n",
+    "            return len(result[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 1]\n",
-      "[1, 3, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(solution(\"FRANCE\", \"french\"))"
+    "solution(2,[1, 1, 1, 1, 2, 2, 2, 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1001110'"
+       "Counter({3: 2, 2: 2, 5: 2, 1: 1, 4: 1})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = \"baabaa\"\n",
+    "from itertools import combinations\n",
+    "from collections import Counter\n",
     "\n",
-    "while True:\n",
-    "    length = len(s)\n",
-    "    i = 0\n",
-    "    \n",
-    "    for i in range(length-1):\n",
-    "        if s[i] == s[i+1]:\n",
-    "            s.remove(s[i])\n",
-    "            s.remove(s[i])\n",
-    "            break\n",
-    "        \n",
-    "            \n",
-    "    "
+    "k = 6\n",
+    "tangerine = [1, 3, 2, 5, 4, 5, 2, 3]\n",
+    "set_t = set(tangerine)\n",
+    "\n",
+    "count = Counter(tangerine)\n",
+    "\n",
+    "count\n"
    ]
   },
   {
