--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -2,67 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import combinations\n",
-    "from collections import Counter\n",
-    "\n",
-    "def solution(k, tangerine):\n",
-    "    count = Counter(tangerine)\n",
-    "        \n",
-    "    sum_list = []\n",
-    "\n",
-    "    for i in count:\n",
-    "        sum_list.append(count[i])\n",
-    "        \n",
-    "    result = []\n",
-    "    for i in range(len(set_t)+1):\n",
-    "        result = result+list(combinations(set_t,i))  \n",
-    "    \n",
-    "    for i in range(len(result)):\n",
-    "        if sum(map(t_dict.get, result[i])) == k:\n",
-    "            return len(result[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solution(2,[1, 1, 1, 1, 2, 2, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({3: 2, 2: 2, 5: 2, 1: 1, 4: 1})"
+       "5"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from itertools import combinations\n",
-    "from collections import Counter\n",
+    "from collections import defaultdict\n",
     "\n",
-    "k = 6\n",
-    "tangerine = [1, 3, 2, 5, 4, 5, 2, 3]\n",
-    "set_t = set(tangerine)\n",
-    "\n",
-    "count = Counter(tangerine)\n",
-    "\n",
-    "count\n"
+    "def solution(n):\n",
+    "    dict = defaultdict(int)\n",
+    "    dict[0] = 1\n",
+    "    dict[1] = 1\n",
+    "    \n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    \n",
+    "    for i in range(2, n + 1):\n",
+    "        dict[i] = int((dict[i-2] + dict[i-1]) % 1234567)\n",
+    "        \n",
+    "        if i == n:\n",
+    "            return dict[i]\n",
+    "        \n",
+    "solution(4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
