--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -17,41 +17,87 @@
     }
    ],
    "source": [
-    "from collections import defaultdict\n",
+    "# programmers  \n",
+    "def solution(arr):\n",
+    "    answer = 0\n",
+    "    return answer\n",
     "\n",
-    "def solution(n):\n",
-    "    dict = defaultdict(int)\n",
-    "    dict[0] = 1\n",
-    "    dict[1] = 1\n",
-    "    \n",
-    "    if n == 1:\n",
-    "        return 1\n",
-    "    \n",
-    "    for i in range(2, n + 1):\n",
-    "        dict[i] = int((dict[i-2] + dict[i-1]) % 1234567)\n",
-    "        \n",
-    "        if i == n:\n",
-    "            return dict[i]\n",
-    "        \n",
-    "solution(4)"
+    "\n",
+    "solution([1 ,2, 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "4"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# backjoon\n",
+    "N, r, c = map(int, input().split(\" \"))\n",
+    "\n",
+    "length = 2 ** N\n",
+    "length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N, r, c = map(int, input().split(\" \"))\n",
+    "loc = 0\n",
+    "\n",
+    "while N != 0:  \n",
+    "    N -= 1\n",
+    "    \n",
+    "    #4사분면    \n",
+    "    if r >= 2 ** N and c >= 2 ** N:\n",
+    "        r -= (2 ** N)\n",
+    "        c -= (2 ** N)\n",
+    "        loc += ((2 ** N) * (2 ** N)) * 3\n",
+    "    #3사분면\n",
+    "    elif r >= 2 ** N and c < 2 ** N:\n",
+    "        r-= (2 ** N)\n",
+    "        loc += ((2 ** N) * (2 ** N)) * 2\n",
+    "    #2사분면\n",
+    "    elif r < 2 ** N and c < 2 ** N:\n",
+    "        pass\n",
+    "    #1사분면\n",
+    "    else:\n",
+    "        c -= (2 ** N)\n",
+    "        loc += ((2 ** N) * (2 ** N))\n",
+    "        \n",
+    "print(loc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
