--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -28,31 +28,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "4\n"
      ]
     }
    ],
    "source": [
     "# backjoon\n",
-    "K = int(input())\n",
-    "nums = []\n",
+    "num = int(input())\n",
+    "dp = [0] * (num + 1)\n",
     "\n",
-    "for k in range(K):\n",
-    "    num = int(input())\n",
-    "    if num == 0:\n",
-    "        nums.pop()\n",
-    "    else:\n",
-    "        nums.append(num)\n",
+    "for i in range(2, num+1):\n",
+    "    dp[i] = dp[i-1] + 1\n",
+    "    \n",
+    "    if i % 2 == 0:\n",
+    "        dp[i] = min(dp[i], dp[i // 2] + 1)\n",
+    "    if i % 3 == 0:    \n",
+    "        dp[i] = min(dp[i], dp[i // 3] + 1)\n",
     "        \n",
-    "print(sum(nums))"
+    "print(dp[num])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
