--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -28,39 +28,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "7\n"
      ]
     }
    ],
    "source": [
     "# backjoon\n",
-    "num = int(input())\n",
-    "dp = [0] * (num + 1)\n",
+    "K = int(input())\n",
+    "nums = []\n",
     "\n",
-    "for i in range(2, num+1):\n",
-    "    dp[i] = dp[i-1] + 1\n",
-    "    \n",
-    "    if i % 2 == 0:\n",
-    "        dp[i] = min(dp[i], dp[i // 2] + 1)\n",
-    "    if i % 3 == 0:    \n",
-    "        dp[i] = min(dp[i], dp[i // 3] + 1)\n",
+    "for k in range(K):\n",
+    "    num = int(input())\n",
+    "    if num == 0:\n",
+    "        nums.pop()\n",
+    "    else:\n",
+    "        nums.append(num)\n",
     "        \n",
-    "print(dp[num])"
+    "print(sum(nums))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
