--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -28,39 +28,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "1234\n",
+      "0\n"
      ]
     }
    ],
    "source": [
     "# backjoon\n",
-    "num = int(input())\n",
-    "dp = [0] * (num + 1)\n",
+    "import heapq\n",
+    "import sys\n",
+    "input = sys.stdin.readline  # 더 빠른 입력 처리\n",
     "\n",
-    "for i in range(2, num+1):\n",
-    "    dp[i] = dp[i-1] + 1\n",
-    "    \n",
-    "    if i % 2 == 0:\n",
-    "        dp[i] = min(dp[i], dp[i // 2] + 1)\n",
-    "    if i % 3 == 0:    \n",
-    "        dp[i] = min(dp[i], dp[i // 3] + 1)\n",
-    "        \n",
-    "print(dp[num])"
+    "n = int(input())\n",
+    "\n",
+    "queue = []\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    num = int(input())\n",
+    "    if num > 0:\n",
+    "        heapq.heappush(queue, num)\n",
+    "    else:\n",
+    "        if len(queue) == 0:\n",
+    "            print(0)\n",
+    "        else:\n",
+    "            print(heapq.heappop(queue))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
