--- a/딥러닝/deeplearning.ipynb
+++ b/딥러닝/deeplearning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,101 +15,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AlexNet(nn.Module): # input : 227*227*3\n",
+    "class VGG16(nn.Module): # input : 224*224*3\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.conv1 = nn.Sequential(\n",
-    "            nn.Conv2d(3, 48, kernel_size=11, stride=4),\n",
+    "            nn.Conv2d(3, 64, kernel_size=3, padding=1),\n",
     "            nn.ReLU(),\n",
-    "            nn.Conv2d(48, 48, kernel_size=3, stride=2),\n",
-    "            nn.LocalResponseNorm(5),\n",
+    "            nn.Conv2d(64, 64, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
     "        )\n",
     "        self.conv2 = nn.Sequential(\n",
-    "            nn.Conv2d(48, 128, kernel_size=5, padding=2),\n",
+    "            nn.Conv2d(64, 128, kernel_size=3, padding=1),\n",
     "            nn.ReLU(),\n",
-    "            nn.Conv2d(128, 128, kernel_size=3, stride=2),\n",
-    "            nn.LocalResponseNorm(5),\n",
+    "            nn.Conv2d(128, 128, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
     "        )\n",
     "        self.conv3 = nn.Sequential(\n",
-    "            nn.Conv2d(128, 192, kernel_size=3, padding=1),\n",
-    "            nn.ReLU()\n",
+    "            nn.Conv2d(128, 256, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(256, 256, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(256, 256, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
     "        )\n",
     "        self.conv4 = nn.Sequential(\n",
-    "            nn.Conv2d(192, 192, kernel_size=3, padding=1),\n",
-    "            nn.ReLU()\n",
+    "            nn.Conv2d(256, 512, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(512, 512, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(512, 512, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
     "        )\n",
     "        self.conv5 = nn.Sequential(\n",
-    "            nn.Conv2d(192, 128, kernel_size=3, padding=1),\n",
+    "            nn.Conv2d(512, 512, kernel_size=3, padding=1),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=3, stride=2)\n",
+    "            nn.Conv2d(512, 512, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(512, 512, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
     "        )\n",
-    "        \n",
     "        self.fc1 = nn.Sequential(\n",
     "            nn.Flatten(),\n",
-    "            nn.Linear(128 * 6 * 6, 2048),\n",
+    "            nn.Linear(512 * 7 * 7, 4096),\n",
     "            nn.ReLU(),\n",
+    "            nn.Dropout(0.5)\n",
     "        )\n",
     "        self.fc2 = nn.Sequential(\n",
-    "            nn.Linear(2048, 2048),\n",
+    "            nn.Linear(4096, 4096),\n",
     "            nn.ReLU(),\n",
+    "            nn.Dropout(0.5)\n",
     "        )\n",
     "        self.fc3 = nn.Sequential(\n",
-    "            nn.Linear(4096, 1000)\n",
+    "            nn.Linear(4096, 1000),\n",
+    "            nn.Softmax(dim=1) # CrossEntropyLoss 사용 시 제거\n",
     "        )\n",
+    "        self.maxpool = nn.MaxPool2d(2, 2)\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        a = x\n",
-    "        b = x\n",
+    "        x = self.conv1(x)\n",
+    "        x = self.maxpool(x)\n",
+    "        x = self.conv2(x)\n",
+    "        x = self.maxpool(x)\n",
+    "        x = self.conv3(x)\n",
+    "        x = self.maxpool(x)\n",
+    "        x = self.conv4(x)\n",
+    "        x = self.maxpool(x)\n",
+    "        x = self.conv5(x)\n",
+    "        x = self.maxpool(x)\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.fc2(x)\n",
+    "        x = self.fc3(x)\n",
     "        \n",
-    "        a = self.conv1(a)\n",
-    "        a = self.conv2(a)\n",
-    "        a = self.conv3(a)\n",
-    "        a = self.conv4(a)\n",
-    "        a = self.conv5(a)\n",
-    "        a = self.fc1(a)\n",
-    "        a = self.fc2(a)\n",
-    "        \n",
-    "        b = self.conv1(b)\n",
-    "        b = self.conv2(b)\n",
-    "        b = self.conv3(b)\n",
-    "        b = self.conv4(b)\n",
-    "        b = self.conv5(b)\n",
-    "        b = self.fc1(b)\n",
-    "        b = self.fc2(b)\n",
-    "        \n",
-    "        out = torch.cat((a, b), dim=1)\n",
-    "        out = self.fc3(out)\n",
-    "        \n",
-    "        return out"
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "BATCH = 32\n",
+    "\n",
+    "x = torch.rand(BATCH, 3,224,224)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aepeul/Library/Python/3.9/lib/python/site-packages/torch/nn/modules/module.py:1736: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self._call_impl(*args, **kwargs)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "torch.Size([32, 1000])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "\n",
-    "model = AlexNet().to(device)\n",
-    "BATCH = 32\n",
-    "\n",
-    "x = torch.rand(BATCH, 3,227,227)\n",
+    "model = VGG16().to(device)\n",
     "model(x).size()"
    ]
   },
